--- a/templates/panel-group-edit.html
+++ b/templates/panel-group-edit.html
@@ -9,7 +9,7 @@
 		<div class="rowitem passive"><a>{{lang "panel_group_menu_promotions"}}</a></div>
 		<div class="rowitem passive"><a href="/panel/groups/edit/perms/{{.ID}}">{{lang "panel_group_menu_permissions"}}</a></div>
 	</div>
-{{template "panel-inner-menu.html" . }}
+{{template "panel_inner_menu.html" . }}
 </nav>
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
