--- a/templates/panel_dashboard.html
+++ b/templates/panel_dashboard.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><a>{{lang "panel_dashboard_head"}}</a></div>
