--- a/templates/panel_themes_menus_item_edit.html
+++ b/templates/panel_themes_menus_item_edit.html
@@ -2,7 +2,7 @@
 <div class="colstack panel_stack">
 {{/** TODO: Set the order based on the order here **/}}
 {{/** TODO: Write the backend code and JS code for saving this menu **/}}
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_themes_menus_edit_head"}}</h1></div>
