--- a/templates/panel-forum-edit-perms.html
+++ b/templates/panel-forum-edit-perms.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
