--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 
 <div class="colstack panel_stack">
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 <script type="text/javascript">
 var formVars = {'perm_preset': ['can_moderate','can_post','read_only','no_access','default','custom']};
 </script>
