--- a/templates/panel-group-edit-perms.html
+++ b/templates/panel-group-edit-perms.html
@@ -9,7 +9,7 @@
 		<div class="rowitem passive"><a>Promotions</a></div>
 		<div class="rowitem passive"><a href="/panel/groups/edit/perms/{{.ID}}">Permissions</a></div>
 	</div>
-{{template "panel-inner-menu.html" . }}
+{{template "panel_inner_menu.html" . }}
 </nav>
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
