--- a/templates/panel_analytics_views.html
+++ b/templates/panel_analytics_views.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 	<main id="panel_analytics_right" class="colstack_right">
 		<form id="timeRangeForm" name="timeRangeForm" action="/panel/analytics/views/" method="get">
 			<div class="colstack_item colstack_head">
