--- a/templates/panel_forums.html
+++ b/templates/panel_forums.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 
 <div class="colstack panel_stack">
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 <script>var formVars = {
 	'forum_active': ['Hide','Show'],
 	'forum_preset': ['all','announce','members','staff','admins','archive','custom']};
