--- a/templates/panel_groups.html
+++ b/templates/panel_groups.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
 
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_groups_head"}}</h1></div>
