--- a/templates/panel_themes.html
+++ b/templates/panel_themes.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-{{template "panel-menu.html" . }}
+{{template "panel_menu.html" . }}
 {{/** Stop inlining this x.x **/}}
 <style type="text/css">
 .rowitem::after {
