Added support for two-factor authentication. Added the Account Dashboard and merged a few account views into it. BREAKING CHANGE: We now use config/config.json instead of config/config.go, be sure to setup one of these files, you can config_default.json as an example of what a config.json should look like. If you don't have an existing installation, you can just rely on the installer to do this for you.
CSS Changes (does not include Nox Theme):
Sidebar should no longer show up in the account manager in some odd situations or themes.
Made a few CSS rules more generic.
Forms have a new look in Cosora now.

Config Changes:
Removed the DefaultRoute config field.
Added the DefaultPath config field.
Added the MaxRequestSizeStr config field to make it easier for users to input custom max request sizes without having to use a calculator or figure out how many bytes there are in a megabyte.
Removed the CacheTopicUser config field.
Added the UserCache config field.
Added the TopicCache config field

Phrases:
Removed ten english phrases.
Added 21 english phrases.
Changed eleven english phrases.
Removed some duplicate indices in the english phrase pack.

Removed some old benchmark code.
Tweaked some things to make the linter happy.
Added comments for all the MemoryUserCache and MemoryTopicCache methods.
Added a comment for the null caches, consult the other caches for further information on the methods.
Added a client-side check to make sure the user doesn't upload too much data in a single post. The server already did this, but it might be a while before feedback arrives from it.
Simplified a lot of the control panel route code with the buildBasePage function.
Renamed /user/edit/critical/ to /user/edit/password/
Renamed /user/edit/critical/submit/ to /user/edit/password/submit/
Made some small improvements to SEO with a couple of meta tags.
Renamed some of the control panel templates so that they use _ instead of -.
Fixed a bug where notices were being moved to the wrong place

--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -1245,7 +1245,7 @@ textarea {
 	border-top: 1px solid var(--element-border-color) !important;
 }
 
-.colstack_item .formrow {
+/*.colstack_item .formrow {
 	display: flex;
 }
 .colstack_right .formrow {
@@ -1267,7 +1267,7 @@ textarea {
 	width: 40%;
 	margin-right: 12px;
 	white-space: nowrap;
-}
+}*/
 .formitem:only-child {
 	width: 100%;
 	display: flex;
@@ -1295,24 +1295,27 @@ textarea {
 #create_topic_page .close_form, #create_topic_page .formlabel, #login_page .formlabel {
 	display: none;
 }
-#login_page .formrow:not(:first-child):not(:last-child), #register_page .formrow:not(:first-child):not(:last-child) {
+.formrow:not(:first-child):not(:last-child) {
 	margin-top: 4px;
 }
-#login_page .formrow:not(:first-child), #register_page .formrow:not(:first-child) {
+.formrow:not(:first-child) {
 	padding-top: 3px;
+}
+.formrow {
+	padding: 16px;
+}
+.formrow:not(:last-child) {
+	padding-bottom: 4px;
 }
 #login_page .formrow:not(:last-child) {
 	padding-bottom: 0px;
 }
-#login_page .formrow, #register_page .formrow {
-	padding: 16px;
-}
-#register_page .formrow:not(:last-child) {
-	padding-bottom: 4px;
-}
-#register_page .formlabel {
+.formlabel {
 	display: block;
 	font-size: 15px;
+}
+.quick_create_form .formrow {
+	padding: 0px;
 }
 #register_page .register_button_row {
 	padding: 12px !important;
