--- a/templates/account_menu.html
+++ b/templates/account_menu.html
@@ -1,15 +1,13 @@
 <nav class="colstack_left">
 	<div class="colstack_item colstack_head rowhead menuhead">
 		<div class="rowitem">
-			<a href="/user/edit/critical/"><h1>{{lang "account_menu_head"}}</h1></a>
+			<a href="/user/edit/"><h1>{{lang "account_menu_head"}}</h1></a>
 			</div>
 	</div>
 	<div class="colstack_item rowmenu">
-		<div class="rowitem passive"><a href="/user/edit/avatar/">{{lang "account_menu_avatar"}}</a></div>
-		<div class="rowitem passive"><a href="/user/edit/username/">{{lang "account_menu_username"}}</a></div>
-		<div class="rowitem passive"><a href="/user/edit/critical/">{{lang "account_menu_password"}}</a></div>
+		<div class="rowitem passive"><a href="/user/edit/password/">{{lang "account_menu_password"}}</a></div>
 		<div class="rowitem passive"><a href="/user/edit/email/">{{lang "account_menu_email"}}</a></div>
-		<!--<div class="rowitem passive"><a href="/user/edit/notifications/">{{lang "account_menu_notifications"}}</a></div>-->
+		<div class="rowitem passive"><a href="/user/edit/notifications/">{{lang "account_menu_notifications"}}</a> <span class="account_soon">Coming Soon</span></div>
 		{{/** TODO: Add an alerts page with pagination to go through alerts which either don't fit in the alerts drop-down or which have already been dismissed. Bear in mind though that dismissed alerts older than two weeks might be purged to save space and to speed up the database **/}}
 	</div>
 </nav>
