--- a/templates/header.html
+++ b/templates/header.html
@@ -14,10 +14,13 @@
 		<script type="text/javascript">
 		var session = "{{.CurrentUser.Session}}";
 		var siteURL = "{{.Header.Site.URL}}";
+		var maxRequestSize = "{{.Header.Site.MaxRequestSize}}";
 		</script>
 		<script type="text/javascript" src="/static/global.js"></script>
 		<meta name="viewport" content="width=device-width,initial-scale = 1.0, maximum-scale=1.0,user-scalable=no" />
 		{{if .Header.MetaDesc}}<meta name="description" content="{{.Header.MetaDesc}}" />{{end}}
+		<meta property="og:site_name" content="{{.Header.Site.Name}}">
+		<meta property="og:title" content="{{.Title}} | {{.Header.Site.Name}}">
 	</head>
 	<body>
 		{{if not .CurrentUser.IsSuperMod}}<style>.supermod_only { display: none !important; }</style>{{end}}
@@ -53,6 +56,6 @@
 				<div class="midLeft"></div>
 				<div id="back" class="zone_{{.Header.Zone}}{{if .Header.Widgets.RightSidebar}} shrink_main{{end}}">
 					<div id="main" >
-						<div class="alertbox">{{range .Header.NoticeList}}
+						<div class="alertbox initial_alertbox">{{range .Header.NoticeList}}
 				{{template "notice.html" . }}{{end}}
 						</div>
