--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -25,9 +25,15 @@
 .colstack_left .colstack_head:not(:first-child) {
 	margin-top: 8px;
 }
+.colstack_left .colstack_head a {
+	color: rgb(231, 231, 231);
+}
 .rowmenu {
 	margin-bottom: 2px;
 	font-size: 17px;
+}
+.rowmenu a {
+	color: rgb(170, 170, 170);
 }
 
 .colstack_right {
@@ -37,4 +43,58 @@
 	padding-right: 24px;
 	padding-bottom: 24px;
 	padding-left: 24px;
+}
+.colstack_right .colstack_item.the_form {
+	background-color: #555555;
+}
+.colstack_right .colstack_item:not(.colstack_head):not(.rowhead) .rowitem {
+	background-color: #555555;
+}
+
+.colstack_grid {
+	display: grid;
+	grid-gap: 8px;
+	grid-template-columns: repeat(3, 1fr);
+}
+.grid_item {
+	border-radius: 3px;
+	color: rgb(190,190,190);
+	background-color: #555555;
+	padding: 12px;
+}
+
+.rowlist.bgavatars .rowitem {
+	background-image: none !important;
+}
+.rowlist.bgavatars .bgsub {
+	width: 48px;
+	height: 48px;
+}
+
+input, select, button, .formbutton, textarea {
+	background: rgb(107,107,107);
+	color: rgb(217,217,217);
+}
+input:focus, select:focus, textarea:focus {
+	outline: 1px solid rgb(137,137,137);
+}
+/* ? - The background properties need to be redeclared for the new image or it won't work properly */
+input {
+	background-image: url(./fa-svg/pencil-alt-light.svg);
+	background-size: 12px;
+	background-repeat: no-repeat;
+	background-position: right 10px bottom 9px;
+    background-position-x: right 10px;
+}
+input::placeholder, textarea::placeholder {
+	color: rgb(167,167,167);
+	opacity: 1; /* Firefox fix */
+}
+button, .formbutton {
+	/*background: rgb(110,110,210);
+	color: rgb(250,250,250);*/
+}
+#themeSelector select {
+	background: rgb(90,90,90);
+    color: rgb(200,200,200);
 }
