--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -488,7 +488,7 @@ textarea.large {
 	margin-top: 0px;
 }
 
-.formitem input {
+input {
 	background-color: var(--input-background-color);
 	border: 1px solid var(--input-border-color);
 	color: var(--input-text-color);
